Alignment fix, time fix, view all button

--- a/src/App.scss
+++ b/src/App.scss
@@ -80,7 +80,6 @@ h4 {
 // source: https://codepen.io/klesht/pen/pjjegK?editors=0100
 .recipe-card {
 	background: white;
-	width: 90%;
 	border: 2px solid rgb(29, 29, 77);
 	border-radius: 75px;
 
